<?xml version="1.0"?>
<package format="2">
  <name>robp_boot_camp_world</name>
  <version>1.0.0</version>
  <description>The robp_boot_camp_world package</description>

  <maintainer email="dduberg@kth.se">Daniel Duberg</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/KTH-CAS-UAV/robp_boot_camp</url>

  <author email="dduberg@kth.se">Daniel Duberg</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>angles</depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>
</package>
